// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskGraphCreator (tasks with dependency configurations) should create a task graph (builds depend on builds of dependencies even with intermediate projects) 1`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common2:build",
    ],
    "common2:build": Array [],
  },
  "roots": Array [
    "common2:build",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "common2:build": Object {
      "id": "common2:build",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "build",
      },
    },
  },
}
`;

exports[`TaskGraphCreator (tasks with dependency configurations) should create a task graph (builds depend on builds of dependencies with intermediate projects and circular dependencies between projects) 2 1`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common3:build",
    ],
    "common3:build": Array [],
  },
  "roots": Array [
    "common3:build",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "common3:build": Object {
      "id": "common3:build",
      "overrides": Object {},
      "projectRoot": "common3",
      "target": Object {
        "configuration": undefined,
        "project": "common3",
        "target": "build",
      },
    },
  },
}
`;

exports[`TaskGraphCreator (tasks with dependency configurations) should create task graph (builds depend on build of dependencies and prebuild of self) 1`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common1:build",
      "app1:prebuild",
    ],
    "app1:prebuild": Array [],
    "app2:build": Array [
      "common2:build",
      "app2:prebuild",
    ],
    "app2:prebuild": Array [],
    "common1:build": Array [],
    "common2:build": Array [],
  },
  "roots": Array [
    "common1:build",
    "app1:prebuild",
    "common2:build",
    "app2:prebuild",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "app1:prebuild": Object {
      "id": "app1:prebuild",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "prebuild",
      },
    },
    "app2:build": Object {
      "id": "app2:build",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "build",
      },
    },
    "app2:prebuild": Object {
      "id": "app2:prebuild",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "prebuild",
      },
    },
    "common1:build": Object {
      "id": "common1:build",
      "overrides": Object {},
      "projectRoot": "common1-root",
      "target": Object {
        "configuration": undefined,
        "project": "common1",
        "target": "build",
      },
    },
    "common2:build": Object {
      "id": "common2:build",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "build",
      },
    },
  },
}
`;

exports[`TaskGraphCreator (tasks with dependency configurations) should create task graph (builds depend on build of dependencies) 1`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common1:build",
    ],
    "app2:build": Array [
      "common2:build",
    ],
    "common1:build": Array [],
    "common2:build": Array [],
  },
  "roots": Array [
    "common1:build",
    "common2:build",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "app2:build": Object {
      "id": "app2:build",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "build",
      },
    },
    "common1:build": Object {
      "id": "common1:build",
      "overrides": Object {},
      "projectRoot": "common1-root",
      "target": Object {
        "configuration": undefined,
        "project": "common1",
        "target": "build",
      },
    },
    "common2:build": Object {
      "id": "common2:build",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "build",
      },
    },
  },
}
`;

exports[`TaskGraphCreator (tasks with dependency configurations) should create task graph (builds depend on build of dependencies, builds depend on prebuilds) 1`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common1:build",
      "app1:prebuild",
    ],
    "app1:prebuild": Array [
      "common1:build",
    ],
    "app2:build": Array [
      "common2:build",
      "app2:prebuild",
    ],
    "app2:prebuild": Array [
      "common2:build",
    ],
    "common1:build": Array [],
    "common2:build": Array [],
  },
  "roots": Array [
    "common1:build",
    "common2:build",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "app1:prebuild": Object {
      "id": "app1:prebuild",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "prebuild",
      },
    },
    "app2:build": Object {
      "id": "app2:build",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "build",
      },
    },
    "app2:prebuild": Object {
      "id": "app2:prebuild",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "prebuild",
      },
    },
    "common1:build": Object {
      "id": "common1:build",
      "overrides": Object {},
      "projectRoot": "common1-root",
      "target": Object {
        "configuration": undefined,
        "project": "common1",
        "target": "build",
      },
    },
    "common2:build": Object {
      "id": "common2:build",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "build",
      },
    },
  },
}
`;

exports[`TaskGraphCreator (tasks with dependency configurations) should create task graph (builds depend on build of dependencies, builds depend on prebuilds) 2`] = `
Object {
  "dependencies": Object {
    "app1:build": Array [
      "common1:build",
    ],
    "app2:build": Array [
      "common2:build",
    ],
    "common1:build": Array [
      "common1:prebuild",
    ],
    "common1:prebuild": Array [],
    "common2:build": Array [
      "common2:prebuild",
    ],
    "common2:prebuild": Array [],
  },
  "roots": Array [
    "common1:prebuild",
    "common2:prebuild",
  ],
  "tasks": Object {
    "app1:build": Object {
      "id": "app1:build",
      "overrides": Object {},
      "projectRoot": "app1-root",
      "target": Object {
        "configuration": undefined,
        "project": "app1",
        "target": "build",
      },
    },
    "app2:build": Object {
      "id": "app2:build",
      "overrides": Object {},
      "projectRoot": "app2-root",
      "target": Object {
        "configuration": undefined,
        "project": "app2",
        "target": "build",
      },
    },
    "common1:build": Object {
      "id": "common1:build",
      "overrides": Object {},
      "projectRoot": "common1-root",
      "target": Object {
        "configuration": undefined,
        "project": "common1",
        "target": "build",
      },
    },
    "common1:prebuild": Object {
      "id": "common1:prebuild",
      "overrides": Object {},
      "projectRoot": "common1-root",
      "target": Object {
        "configuration": undefined,
        "project": "common1",
        "target": "prebuild",
      },
    },
    "common2:build": Object {
      "id": "common2:build",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "build",
      },
    },
    "common2:prebuild": Object {
      "id": "common2:prebuild",
      "overrides": Object {},
      "projectRoot": "common2-root",
      "target": Object {
        "configuration": undefined,
        "project": "common2",
        "target": "prebuild",
      },
    },
  },
}
`;
